RESOLVED FIXED225977
Fix typo in AirUseCounts
https://bugs.webkit.org/show_bug.cgi?id=225977
Summary Fix typo in AirUseCounts
Robin Morisset
Reported 2021-05-19 11:54:47 PDT
Attachments
Patch (1.52 KB, patch)
2021-05-19 11:58 PDT, Robin Morisset
mark.lam: review+
rmorisset: commit-queue-
Patch for landing (5.52 KB, patch)
2021-05-19 12:56 PDT, Robin Morisset
no flags
Robin Morisset
Comment 1 2021-05-19 11:55:46 PDT
I introduced a single-letter typo in AirUseCounts in https://trac.webkit.org/changeset/277714/webkit. Thanks Tuomas for catching it. The fix is trivial.
Robin Morisset
Comment 2 2021-05-19 11:58:45 PDT
Mark Lam
Comment 3 2021-05-19 12:00:22 PDT
Comment on attachment 429081 [details] Patch r=me
Robin Morisset
Comment 4 2021-05-19 12:13:36 PDT
Comment on attachment 429081 [details] Patch Saam convinced me to add a test before landing this.
Robin Morisset
Comment 5 2021-05-19 12:56:03 PDT
Created attachment 429087 [details] Patch for landing Same as patch reviewed by Mark, just adding the test case.
EWS
Comment 6 2021-05-19 13:49:35 PDT
Committed r277748 (237918@main): <https://commits.webkit.org/237918@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 429087 [details].
Note You need to log in before you can comment on or make changes to this bug.