Fix typo in AirUseCounts https://bugs.webkit.org/show_bug.cgi?id=225977 rdar://78210501

Reviewed by Mark Lam.

JSTests:

Add the testcase found by Tuomas.

* stress/register-allocator-stress.js: Added.
(foo):

Source/JavaScriptCore:

I had just messed up a copy-and-paste, using "gp" instead of "fp" in code that deals with floating point values.
This did not show in my tests, probably because few functions have more floating point temporaries than non-floating-point.

* b3/air/AirUseCounts.h:
(JSC::B3::Air::UseCounts::UseCounts):


Canonical link: https://commits.webkit.org/237918@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277748 268f45cc-cd09-0410-ab3c-d52691b4dbfc